      \item Remove old versions of methods \code{fixef},
      \code{ranef}, \code{coef}, and \code{VarCorr}.
      \item No longer support models fitted with \pkg{brms} < 1.0, 
      which used the multivariate \code{'trait'} syntax
      orginally deprecated in \pkg{brms} 1.0.
      \item Make posterior sample extraction in the 
      \code{summary} method cleaner and less error prone.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Store \code{stan_funs} in \code{brmsfit} objects
      to allow using \code{update} on models with user-defined
      Stan functions thanks to Tom Wallis. (#288)
      \item Fix problems in various post-processing methods 
      when applied to models with the reserved variable 
      \code{intercept} in group-level terms thanks to
      the GitHub user ASKurz. (#279)
      \item Fix an unexpected error in \code{predict} and related 
      methods when setting \code{sample_new_levels = "gaussian"}
      in models with only one group-level effect.
      Thanks to Timothy Mastny. (#286)
    }
  }
}

\section{CHANGES IN VERSION 1.10.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Allow setting priors on noise-free
      variables specified via function \code{me}.
      \item Add arguments \code{Ksub}, \code{exact_loo} 
      and \code{group} to method \code{kfold} for 
      defining omitted subsets according to a
      grouping variable or factor.
      \item Allow addition argument \code{se}
      in \code{skew_normal} models.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Ensure correct behavior of horseshoe
      and lasso priors in multivariate models
      thanks to Donald Williams.
      \item Allow using \code{identity} links on
      all parameters of the \code{wiener} family
      thanks to Henrik Singmann. (#276)
      \item Use reasonable dimnames in the output
      of \code{fitted} when returning linear predictors
      of ordinal models thanks to the GitHub user atrolle. (#274)